--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
   left: 0;
   width: 100%;
   z-index: 100;
-
 }
 
 .header a{
@@ -31,13 +30,9 @@
   padding: 30px 60px 30px 60px;
 }
 
-
-
-
 #banner{
   width:100%;
 }
-/*Sections*/
 
 /*Fonts*/
 
@@ -51,25 +46,30 @@ h3{
   font-family: 'Times New Roman', Times, serif;
   font-size: 40px;
   padding: 40px;
-
 }
 
-#Carrera-Profesional {
-  background-color: rgb(116, 143, 251);
+/*Links*/
+a{
+  text-decoration: none;
+  color: black;
 }
 
-img{
-  width: 100%;
-  height: 100%;
-}
 
+  p {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+
+/*Sections*/
+
+
+/*Historia*/
 #historia {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 100px);
-  grid-gap: 10px;
+  grid-gap: 1px;
   padding: 40px;
-  max-width: 1200px;
+  max-width: 12000px;
 }
 
 #item-1 {
@@ -90,22 +90,28 @@ img{
   align-items: center;
   object-fit: cover;
 }
+/*Historia Pagina*/
 
-
-
-
-
-/*Links*/
-a{
-  text-decoration: none;
-  color: black;
+#parrafo-intro{
+  text-align: justify;
+  margin: 1.5rem;
 }
 
+#historia-pagina{
+  text-align: justify;
+  margin: 2rem 4rem 2rem 4rem;
+}
 
-  p {
-    font-size: 30px;
-    font-family: 'Times New Roman', Times, serif;
-  }
+/*Carrera Profesional*/
+
+#Carrera-Profesional {
+  background-color: rgb(116, 143, 251);
+}
+
+img{
+  width: 100%;
+  height: 100%;
+}
 
 
 #carrera-profesional{
@@ -114,7 +120,7 @@ a{
   align-items: top;
   gap: 1rem;
   flex-wrap: wrap;
-  background-color: #B0946E;
+  background-color: #615959;  
 }
 
 .item{
@@ -124,9 +130,9 @@ a{
 flex: 1 1 clamp(300px, 30%, 400px);
 gap: 1rem;
 padding: 30px;
-
 }
 
+/*Sus Logros*/
 #sus-logros{
   display: flex;
   justify-content: center;
@@ -144,13 +150,17 @@ gap: 1rem;
 padding: 30px;
 }
 
+/*Pagina Logros*/
+#logros-pagina{
+  text-align: justify;
+  margin: 2rem 4rem 2rem 4rem;
+}
+
+
+
   /*Footer*/
 
-  footer h1{
-    color: #FBFCF9;
-  }
-
-  footer h2{
+  footer h1,h2,h4{
     color: #FBFCF9;
   }
 
@@ -165,10 +175,24 @@ padding: 30px;
   }
 
 
-  footer{
+  #sobre-nosotros{
+    padding: 3rem;
     background-color: #2B2A2C;
   }
 
+  textarea{
+    width: 800px;
+    height: 150px;
+  }
+  #preguntas{
+display: flex;
+gap: 2rem;
+  }
+
+
+  /*Fin Footer*/
+
+  /*Media Query*/
   @media only screen and (max-width: 500px){
 
     #historia{
