--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 /*Fonts*/
 h1 {
   font-family: "Times New Roman", Times, serif;
-  padding: 30px;
+  padding: 10px;
 }
 
 h3 {
   font-family: #2B2A2C;
   font-size: 3rem;
-  padding: 40px;
+  padding: 10px;
 }
 
 /*Links*/
@@ -16,15 +16,12 @@ a {
   color: #2B2A2C;
 }
 
-p {
-  font-size: 1rem;
-  font-family: "Times New Roman", Times, serif;
-  color: #2B2A2C;
+img {
+  width: 70%;
 }
 
-img {
+.logo {
   width: 100%;
-  height: 100%;
 }
 
 /*Footer*/
@@ -74,11 +71,96 @@ textarea {
 }
 
 .navbar-brand {
-  padding: 30px 30px 30px 50px;
+  padding: 10px 30px 10px 50px;
 }
 
 .nav-item {
-  padding: 30px 60px 30px 60px;
+  padding: 2px 60px 2px 60px;
+}
+
+.navbar-toggler-icon {
+  filter: invert(1);
+}
+
+/*Carrera Pagina*/
+#parrafo-intro {
+  margin: 0px;
+}
+
+#carrera-article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 2rem;
+}
+
+.video-carrera {
+  display: flex;
+  justify-content: top;
+  align-items: top;
+  gap: 7rem;
+  flex: 1 1 clamp(300px, 30%, 400px);
+}
+
+.video-carrera-2 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: top;
+  align-items: top;
+  gap: 7rem;
+  flex: 1 1 clamp(300px, 30%, 400px);
+}
+
+.video-carrera-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
+}
+
+@media only screen and (max-width: 960px) {
+  .video-carrera {
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    align-items: top;
+    gap: 7rem;
+    flex: 1 1 clamp(300px, 30%, 400px);
+  }
+  .video-carrera-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    align-items: top;
+    gap: 7rem;
+    flex: 1 1 clamp(300px, 30%, 400px);
+  }
+}
+iframe {
+  width: 100%;
+}
+
+#section-estadisticas {
+  padding: 2rem;
+}
+
+#p-estadisticas {
+  columns: 2;
+  column-gap: 2rem;
+}
+
+.h3-estadisticas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#section-gol {
+  padding: 2rem;
 }
 
 /*Historia Pagina*/
@@ -104,71 +186,96 @@ p {
   color: #2B2A2C;
 }
 
+/*banner*/
+.image-container {
+  position: relative;
+}
+
+.texto-encima {
+  position: absolute;
+  top: 8%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #2B2A2C; /* Color del texto */
+  padding: 20px;
+}
+
+.texto-encima h1 {
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+
 /*Historia*/
 #historia {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1px;
-  padding: 40px;
-  max-width: 12000px;
-}
-
-#item-1 {
-  grid-column: 0.5;
-  grid-row: 0.5;
-}
-
-#item-2 {
-  grid-column: 0.3333333333;
-  grid-row: 0.5;
-}
-
-#item-3 {
-  grid-column: 0.6;
-  grid-row: 0.25;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  object-fit: cover;
+  justify-content: top;
+  align-items: top;
+  margin: 0px 30px;
+  max-width: 12000px;
+  padding: 80px 20px 20px 20px;
+}
+
+.historia-item {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  padding: 10px 20px 20px 20px;
 }
 
 /*Carrera Profesional*/
-#Carrera-Profesional {
-  background-color: rgb(116, 143, 251);
-}
-
 #carrera-profesional {
   display: flex;
-  justify-content: center;
+  justify-content: top;
   align-items: top;
-  gap: 1rem;
-  flex-wrap: wrap;
-  background-color: #615959;
+  gap: 4rem;
+  background-color: #2B2A2C;
+  padding: 80px 20px 80px 20px;
 }
 
-.item {
+.carrera-profesional-item {
   display: flex;
-  align-items: top;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
   gap: 1rem;
   flex: 1 1 clamp(300px, 30%, 400px);
-  padding: 30px;
+  margin: 0px 30px;
+}
+
+.carrera-profesional-item2 {
+  color: #FBFCF9;
+}
+
+.img-carrera {
+  width: 50%;
 }
 
 /*Sus Logros*/
 #sus-logros {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: top;
   gap: 1rem;
   flex-wrap: wrap;
+  padding: 35px;
 }
 
-.item {
+.logros-item {
   display: flex;
-  align-items: top;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
   flex: 1 1 clamp(300px, 30%, 400px);
-  padding: 30px;
+  padding: 20px 60px;
+}
+
+.img-logros {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
 }
 
 @media only screen and (max-width: 500px) {
