--- a/scss/globals/_reset.scss
+++ b/scss/globals/_reset.scss
@@ -3,14 +3,14 @@
 
 h1{
     font-family: $font-primary;
-    padding: 30px;
+    padding: 10px;
   
   }
   
   h3{
     font-family: $color-secondary;
     font-size: $font-size-large;
-    padding: 40px;
+    padding: 10px;
   }
   
   /*Links*/
@@ -21,7 +21,10 @@ h1{
 
 
     img{
+        width: 70%;
+      }
+
+      .logo{
         width: 100%;
-        height: 100%;
       }
       
