--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -3,62 +3,81 @@ p {
     font-family: $font-primary;
     color: $color-secondary;
     }
+/*banner*/
+    .image-container {
+      position: relative;
+    }
+    
+    .texto-encima {
+      position: absolute;
+      top: 8%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: $color-secondary; /* Color del texto */
+      padding: 20px;
+    }
+    
+    .texto-encima h1 {
+      font-size: 50px;
+      margin-bottom: 10px;
+    }
+    
+    
 
 /*Historia*/
 #historia {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1px;
-    padding: 40px;
+  @include flex (null,top, top ,null,null);
+    margin: 0px 30px;
     max-width: 12000px;
+    padding: 80px 20px 20px 20px;
   }
 
-  #item-1 {
-    @include grid(1/2,1/2);
-
-  }
-  
-  #item-2 {
-    @include grid(1/3,2/4);
-  }
-  
-  #item-3 {
-    @include grid(3/5,1/4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    object-fit: cover;
+  .historia-item{
+    @include flex (column,null,null ,0px,null);
+    padding: 10px 20px 20px 20px;
   }
 
   /*Carrera Profesional*/
 
-#Carrera-Profesional {
-    background-color: rgb(116, 143, 251);
-  }
-
   #carrera-profesional{
-    @include flex (null, center, top ,1rem,wrap);
-    background-color: #615959;  
+    @include flex (null,top, top ,4rem,null);
+    background-color: $color-secondary;  
+    padding: 80px 20px 80px 20px;
   }
   
-  .item{
-    @include flex (null, null, top ,1rem,null);
+  .carrera-profesional-item{
+    @include flex (column,left,left,1rem,null);
   flex: 1 1 clamp(300px, 30%, 400px);
-  padding: 30px;
+  margin: 0px 30px;
+}
+
+  .carrera-profesional-item2 {
+    color: $color-primary;
   }
 
+.img-carrera{
+  width: 50%;
+}
   
 /*Sus Logros*/
 #sus-logros{
-    @include flex (null, center, top ,1rem,wrap);
+    @include flex (column, center, top ,1rem,wrap);
+    padding:35px;
   }
   
-  .item{
-    @include flex (null, null, top ,1rem,null);
+  .logros-item{
+    @include flex (column,center,center,1rem,null);
   flex: 1 1 clamp(300px, 30%, 400px);
-  padding: 30px;
+  padding: 20px 60px;
   }
-  
+  .img-logros{
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+
+  }
+
   @media only screen and (max-width: 500px){
 
     #historia{
