--- a/scss/views/_carrera.scss
+++ b/scss/views/_carrera.scss
@@ -23,6 +23,7 @@
 
 .video-carrera-item{
     @include flex (column,top, center,null,null);
+    width: 100%;
 }
 
 @media only screen and (max-width: 960px){
